objects/SA_Audit__Test_Object__c.object
<CustomObject>
    <fields>
        <fullName>SA_Audit__Test_Field10__c</fullName>
        <description>adgadfg</description>
        <inlineHelpText>adfadfg</inlineHelpText>
        <label>Test Field10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SA_Audit__Test_Field11__c</fullName>
        <description>adfgdafg</description>
        <inlineHelpText>dfagadfg</inlineHelpText>
        <label>Test Field11</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SA_Audit__Test_Field12__c</fullName>
        <description>dfgadfg</description>
        <inlineHelpText>dagadf</inlineHelpText>
        <label>Test Field12</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SA_Audit__UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>adfgd</description>
        <inlineHelpText>agdg</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Test_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Test /\Object</label>
    <listViews>
        <fullName>SA_Audit__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Test Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Objects</pluralLabel>
    <recordTypes>
        <fullName>SA_Audit__Test_Record_Type1</fullName>
        <active>true</active>
        <description>Test</description>
        <label>Test Record Type1</label>
    </recordTypes>
    <recordTypes>
        <fullName>SA_Audit__Test_Record_Type2</fullName>
        <active>true</active>
        <description>Test</description>
        <label>Test Record Type2</label>
    </recordTypes>
    <recordTypes>
        <fullName>SA_Audit__Test_Record_Type3</fullName>
        <active>true</active>
        <label>Test Record Type3</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>